--- a/packages/textfield/_style.scss
+++ b/packages/textfield/_style.scss
@@ -1,6 +1,8 @@
-@import "@material/textfield/mdc-text-field";
-@import "@smui/floating-label/style";
-@import "@smui/line-ripple/style";
-@import "@smui/notched-outline/style";
-@import "./mixins";
-@include smui-text-field-core-styles;
+@use '@smui/floating-label/style' as floating-label-style;
+@use '@smui/line-ripple/style' as line-ripple-style;
+@use '@smui/notched-outline/style' as notched-outlinelabel-style;
+@use '@material/textfield';
+@use './mixins';
+
+@include textfield.core-styles;
+@include mixins.core-styles;
