fix: textfield onDestroy issues

--- a/site/src/routes/demo/theme.scss
+++ b/site/src/routes/demo/theme.scss
@@ -26,5 +26,5 @@
   // Import the '/style' file for each component you
   // use within this alternate theme's container.
   @import '@smui/button/style';
-  // @import '@smui/fab/style';
+  @import '@smui/fab/style';
 }
