fix: svgs in icon buttons were focusable

--- a/packages/icon-button/_style.scss
+++ b/packages/icon-button/_style.scss
@@ -2,3 +2,8 @@
 @use '@smui/ripple/style';
 
 @include icon-button.core-styles;
+
+// Prevent pointer giving focus inside.
+.mdc-icon-button svg {
+  pointer-events: none;
+}
