docs: move Typography to new source viewer

--- a/site/src/routes/demo/typography/Typography.scss
+++ b/site/src/routes/demo/typography/Typography.scss
@@ -1,5 +1,21 @@
 // Import all the styles for the classes.
 @use "@material/typography/mdc-typography";
+// The following classes become available:
+//   mdc-typography--headline1
+//   mdc-typography--headline2
+//   mdc-typography--headline3
+//   mdc-typography--headline4
+//   mdc-typography--headline5
+//   mdc-typography--headline6
+//   mdc-typography--subtitle1
+//   mdc-typography--subtitle2
+//   mdc-typography--body1
+//   mdc-typography--body2
+//   mdc-typography--caption
+//   mdc-typography--button
+//   mdc-typography--overline
+//   mdc-typography--body1
+
 // Import the mixins.
 @use "@material/typography";
 
