--- a/site/src/routes/demo/theme/Theme.scss
+++ b/site/src/routes/demo/theme/Theme.scss
@@ -3,7 +3,7 @@
 @use '@material/theme' with (
   $primary: color-palette.$green-100,
   $secondary: color-palette.$cyan-100,
-  $background: #000,
+  $background: color-palette.$purple-900,
   $surface: #000,
   $error: color-palette.$orange-100
 );
@@ -17,7 +17,7 @@
   padding: 2em;
   min-height: 100%;
   min-width: 100%;
-  background-color: #000;
+  background-color: color-palette.$purple-900;
   color: #fff;
 
   // Set all the CSS variables to this theme's colors.
