docs: list npm install commands on demo pages

--- a/site/src/routes/_app.scss
+++ b/site/src/routes/_app.scss
@@ -90,6 +90,10 @@ body,
   content: ' ';
 }
 
+.demo-main-content > section > .spaced {
+  margin-bottom: 2.5em;
+}
+
 .status {
   max-width: 100%;
   font-size: 0.9em;
