--- a/site/src/routes/demo/elevation/_Elevation.scss
+++ b/site/src/routes/demo/elevation/_Elevation.scss
@@ -2,29 +2,6 @@
 @use "smui-theme";
 
 //
-// MDC Elevation
+// MDC Elevation Classes
 //
 @use "@material/elevation/mdc-elevation";
-
-//
-// Demo Code
-//
-
-@use "@material/elevation";
-@use "@material/theme";
-
-.my-primary {
-  @include theme.property(color, primary);
-
-  &.elevated {
-    @include elevation.elevation(4, primary);
-  }
-}
-
-.my-secondary {
-  @include theme.property(color, secondary);
-
-  &.elevated {
-    @include elevation.elevation(4, secondary);
-  }
-}
