--- a/packages/slider/_style.scss
+++ b/packages/slider/_style.scss
@@ -1,2 +1,6 @@
 @use '@material/slider/styles';
 @use '@smui/ripple/style';
+
+.mdc-slider {
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+}
