feat: new Theme Builder package

--- a/packages/smui-theme/_style.scss
+++ b/packages/smui-theme/_style.scss
@@ -1,3 +1,4 @@
+@use '@smui/nonexist/style' as nonexist;
 @use '@smui/banner/style' as banner;
 @use '@smui/button/style' as button;
 @use '@smui/card/style' as card;
