fix: textfield labels and notches show incorrect state and position
Fixes #236

--- a/packages/floating-label/_style.scss
+++ b/packages/floating-label/_style.scss
@@ -1,1 +1,10 @@
 @use '@material/floating-label/mdc-floating-label';
+
+.smui-floating-label--remove-transition {
+  transition: unset !important;
+}
+
+.smui-floating-label--force-size {
+  position: absolute !important;
+  transform: unset !important;
+}
