--- a/packages/switch/_style.scss
+++ b/packages/switch/_style.scss
@@ -1,4 +1,4 @@
-@use '@material/switch/index' as switch;
+@use '@material/switch/deprecated/index' as switch;
 @use '@smui/ripple/style';
 @use './mixins';
 
