fix: migrate sass to compile with latest mdc-web

--- a/packages/icon-button/_style.scss
+++ b/packages/icon-button/_style.scss
@@ -1,4 +1,4 @@
-@use '@material/icon-button/index' as icon-button;
+@use '@material/icon-button/icon-button';
 @use '@smui/ripple/style';
 
 @include icon-button.core-styles;
