--- a/packages/site/src/routes/demo/image-list/_FourByFive.scss
+++ b/packages/site/src/routes/demo/image-list/_FourByFive.scss
@@ -1,8 +1,9 @@
+@use 'sass:math';
 @use '@material/image-list/index' as image-list;
 
 .my-image-list-4x5 {
   @include image-list.standard-columns(5);
-  @include image-list.aspect(4/5);
+  @include image-list.aspect(math.div(4, 5));
   max-width: 680px;
 }
 
