--- a/packages/textfield/icon/_mixins.scss
+++ b/packages/textfield/icon/_mixins.scss
@@ -1,3 +1,4 @@
+@use 'sass:math';
 @use '@material/textfield/icon/variables';
 @use '@material/rtl/mixins' as rtl-mixins;
 @use '@material/feature-targeting/index' as feature-targeting;
@@ -32,7 +33,10 @@
   $feat-structure: feature-targeting.create-target($query, structure);
 
   @include feature-targeting.targets($feat-structure) {
-    $padding: (variables.$touch-target-size - variables.$icon-size) / 2;
+    $padding: math.div(
+      (variables.$touch-target-size - variables.$icon-size),
+      2
+    );
     $left-margin: variables.$trailing-icon-padding-left - $padding;
 
     padding-top: $padding;
