fix: use mdc-web's sass imports and include sass from dev packages

--- a/packages/banner/_style.scss
+++ b/packages/banner/_style.scss
@@ -1,4 +1,4 @@
-@use '@material/banner/styles';
+@use '@material/banner/styles' as banner-styles;
 
 .smui-banner--force-show {
   display: block !important;
