--- a/packages/checkbox/_style.scss
+++ b/packages/checkbox/_style.scss
@@ -1,4 +1,2 @@
-@use '@material/checkbox/index' as checkbox;
+@use '@material/checkbox/mdc-checkbox';
 @use '@smui/ripple/style';
-
-@include checkbox.core-styles;
