--- a/packages/linear-progress/_style.scss
+++ b/packages/linear-progress/_style.scss
@@ -1,3 +1,1 @@
-@use '@material/linear-progress/index' as linear-progress;
-
-@include linear-progress.core-styles;
+@use '@material/linear-progress/mdc-linear-progress';
