--- a/packages/radio/_style.scss
+++ b/packages/radio/_style.scss
@@ -1,2 +1,2 @@
-@use '@material/radio/styles';
-@use '@smui/ripple/style';
+@use '@material/radio/mdc-radio';
+@use '@smui/ripple/style' as ripple-style;
