--- a/packages/select/_style.scss
+++ b/packages/select/_style.scss
@@ -1,4 +1,4 @@
-@use '@material/select/styles';
+@use '@material/select/mdc-select';
 @use '@smui/floating-label/style' as floating-label-style;
 @use '@smui/line-ripple/style' as line-ripple-style;
 @use '@smui/notched-outline/style' as notched-outline-style;
