--- a/packages/textfield/_style.scss
+++ b/packages/textfield/_style.scss
@@ -1,8 +1,7 @@
 @use '@smui/floating-label/style' as floating-label-style;
 @use '@smui/line-ripple/style' as line-ripple-style;
-@use '@smui/notched-outline/style' as notched-outlinelabel-style;
-@use '@material/textfield/index' as textfield;
+@use '@smui/notched-outline/style' as notched-outline-style;
+@use '@material/textfield/mdc-text-field';
 @use './mixins';
 
-@include textfield.core-styles;
 @include mixins.core-styles;
