--- a/packages/menu/_style.scss
+++ b/packages/menu/_style.scss
@@ -1,5 +1,5 @@
 @use '@material/menu/mdc-menu';
-@use '@smui/menu-surface/style';
+@use '@smui/menu-surface/style' as menu-surface-style;
 
 // Increase specificity.
 .mdc-menu__selection-group
