--- a/packages/segmented-button/_style.scss
+++ b/packages/segmented-button/_style.scss
@@ -1,2 +1,2 @@
-@use '@material/segmented-button/styles';
-@use '@smui/ripple/style';
+@use '@material/segmented-button/styles' as segmented-button-styles;
+@use '@smui/ripple/style' as ripple-style;
